--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-constants==2023.2.0
-databases==0.8.0
+constants
+databases
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
-fastapi==0.108.0
-pandas==2.0.3
-passlib==1.7.4
-pydantic==1.9.2
-pyresparser==1.0.6
-python_jose==3.3.0
-SQLAlchemy==1.4.27
-uvicorn==0.25.0
+fastapi
+pandas
+passlib
+pydantic
+pyresparser
+python_jose
+SQLAlchemy
+uvicorn=
