--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 constants
 databases
+pip setuptools wheel
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 fastapi
 pandas
