--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 constants
 databases
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+spacy==2.3.9
+thinc==7.4.6
 fastapi
 pandas
 passlib
