--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 databases
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 setuptools
+spacy
+en_core_web_sm
 thinc
 fastapi
 pandas
