--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 databases
 setuptools
-spacy
-en_core_web_sm
-thinc
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+thinc==7.4.6
 fastapi
 pandas
 passlib
